--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,10 @@
       }
     },
     {
+      "src": "/uploads/(.*)",
+      "dest": "/uploads/$1" 
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
