--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "resend": "^4.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
