--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
     "resend": "^4.2.0"
