--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@tsparticles/all": "^3.8.1",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
     "framer-motion": "^12.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
