--- a/server/.env.example
+++ b/server/.env.example
@@ -1,11 +1,10 @@
 # Server Environment Variables
 # Copy this file to .env for local development
 
-# Email Service Configuration
-EMAIL_SERVICE=gmail
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASSWORD=your-app-specific-password
-EMAIL_FROM="Portfolio Contact" <your-email@gmail.com>
+# Resend API Configuration (Free tier: 100 emails/day, 3000/month)
+# Get your API key from: https://resend.com/api-keys
+RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxxxxxxx
+RESEND_FROM_EMAIL=onboarding@resend.dev
 
 # Server Port
 PORT=5000
